--- a/src/themes/modernTheme.scss
+++ b/src/themes/modernTheme.scss
@@ -127,12 +127,12 @@ $mat-wind: (
     true-wind-background: #f0ca31,
     app-wind-background: #63afdf,
     compass-dark: #3f3f3f,
-    compass-light: #888888,
+    compass-light: #ffffff,
     wind-rose-background: #ffffff,
     port: #d52626,
     starboard: #389c19,
     rudder-port: #d52626,
-    rudder-starboard: #389c19,
+    rudder-starboard: #389c19
 );
 
 // Make temp theme using default palettes
