--- a/src/themes/platypusTheme.scss
+++ b/src/themes/platypusTheme.scss
@@ -57,7 +57,7 @@ $mat-ngGauge: (
 // * You can pull from other mat-palettes or use custom color ie. #e3ff43
 $mat-wind: (
     boat-background: #c7c7c7,
-    heading-background: #c5c5c5,
+    heading-background: #000000,
     true-wind-background: #068dfb,
     app-wind-background: #06fb06,
     compass-dark: #757575,
